--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.gongming.weichart.activity.MainActivity"
+            android:name="com.warmwind.tarcle.activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,12 +24,12 @@
         </activity>
         
         <activity
-            android:name="com.gongming.weichart.activity.PersonInfoActivity"
+            android:name="com.warmwind.tarcle.activity.PersonInfoActivity"
             android:label="@string/app_name" 
             android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name="com.gongming.weichart.activity.SettingActivity"
+            android:name="com.warmwind.tarcle.activity.SettingActivity"
             android:label="@string/app_name" 
             android:screenOrientation="portrait">
         </activity>
